syntax = "proto3";
package mathing;

message UserDeleteRequest {
  oneof one_of_id {
    string name = 1;
    string uuid = 2;
  }
}

message UserDeleteResponse {
  uint64 rows_affected = 1;
}
